# cfdapp

./: .gitignore  README.md  package-lock.json  package.json  pyproject.toml  start-kefka.cmd
api/app/: config.py  main.py  repository.py  services.py
api/tests/: test_api.py
cfdapp.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
frontend/: index.html  package.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.test.tsx  App.tsx  index.css
frontend/src/components/: JobForm.tsx  JobStatusCard.tsx  PressureViewer.tsx
frontend/src/lib/: api.ts  types.ts
scripts/: start-kefka.ps1
shared/cfd_shared/: __init__.py  contracts.py  models.py
shared/contracts/: job-schema.json  presets.json
worker/cfd_worker/: __init__.py  openfoam_templates.py  pipeline.py  runner.py
