[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cfdapp"
version = "0.1.0"
description = "Local-first CFD web app MVP"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0,<1.0.0",
  "pydantic>=2.8.0,<3.0.0",
  "pydantic-settings>=2.4.0,<3.0.0",
  "python-multipart>=0.0.9,<1.0.0",
  "uvicorn>=0.30.0,<1.0.0",
  "numpy>=2.1.0,<3.0.0",
  "networkx>=3.3,<4.0.0",
  "pyvista>=0.44.0,<1.0.0",
  "trimesh>=4.4.0,<5.0.0"
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27.0,<1.0.0",
  "pytest>=8.3.0,<9.0.0"
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["api", "api.*", "worker", "worker.*", "shared", "shared.*"]

[tool.pytest.ini_options]
testpaths = ["api/tests"]
